--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: "3"
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     links:
+      - db
       - redis
   redis:
     image: redis:alpine
@@ -15,4 +16,9 @@ services:
     build: .
     command: celery worker -A happinesspackets -l info
     links:
+      - db
       - redis
+  db:
+    image: postgres:10-alpine
+    environment:
+      POSTGRES_PASSWORD: example
