Refactor documentation, add test script
This commit reorganizes the Sphinx documentation from #65. It follows
the example I use in my sphinx-docs-opinionated-quickstart repository:

    https://github.com/jwflory/sphinx-docs-opinionated-quickstart

    https://blog.justinwflory.com/2018/12/meet-an-opinionated-quickstart-for-sphinx-docs-authors/

Additionally, a new test script exists to simplify testing new docs
contributions. This could be linked into a CI test at some point, if
Pagure supports an easy way to do this.

This commit also enables me to set up ReadTheDocs hosting for the
project documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # automatically created files:
 .DS_Store
 
-virtualenv/
-.idea/workspace.xml
+## Sphinx: generated HTML
+docs/_build
 
 # other
+virtualenv/
+.idea/workspace.xml
 static
 build
 .idea
@@ -19,7 +21,6 @@ syntax: glob
 *.pyc
 *.swp
 *.sqlite3
-
 
 #OIDC credentials
 client_secrets.json
