Integrate fedora-messaging
This commit includes:

1. Adds fedora-messaging and happinesspacket-schema as a dependency in `base.py`
2. Sets env variable to fedora-messaging config file in `Dockerfile`
3. Adds `config.toml` [configuration file for fedora-messaging] to project's
app directory
4. Instructions to build a container for RabbitMQ in `docker-compose.yml`
5. Adds `happinesspacket_schema_package` which houses the schema and tests.
6. Configured MessageSenderConfirmationView to post messages to the broker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,15 @@ services:
     links:
       - db
       - redis
+      - rabbitmq
+  rabbitmq:
+    image: rabbitmq:alpine
+    ports:
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_PASS: pass
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_VHOST: vhost
   redis:
     image: redis:alpine
     ports:
