--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     links:
       - db
       - redis
+    # ports:
+    #   - "587:587"
   db:
     image: postgres:10-alpine
     environment:
