--- a/fas-admin-details.json.example
+++ b/fas-admin-details.json.example
@@ -1,5 +1,4 @@
-#Create fas-admin-details.json and store the following json object into the file with your actual credentials. 
 {
-	"ADMIN_USERNAME":"<admin-username>",
-	"ADMIN_PASSWORD":"<admin-password>"
+	"ADMIN_USERNAME":"",
+	"ADMIN_PASSWORD":""
 }
