--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ client_secrets.json
 
 #Adding fas-admin-details.json so that the username and password does not get pushed
 fas-admin-details.json
+
+# YAML Configuration file for django 
+config.yml
