Auto reload code changes
This commit adds:
1.  The functionailty to auto reload code changes made to the code
base without having to build containers again to see them in effect.
2. The documentation update for the above.
3. Resolve HTML escaping on the search index page

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ fas-admin-details.json
 
 # YAML Configuration file for django 
 config.yml
+
+# Django-haystack files
+whoosh_index/
+
+# VS Code files
+.vscode/
